<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Cart</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>My Cart</item>
        <item>Explore</item>
        <item>History</item>
        <!--<item>discount</item>-->
        <item>Recommendation</item>
        <item>Profile</item>
        <!--<item>Check</item>-->
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_cart_loaded</item>
        <item>@drawable/ic_explore</item>
        <item>@drawable/ic_history</item>
        <!--<item>@drawable/ic_whats_hot</item>-->
        <item>@drawable/ic_suggest</item>
        <item>@drawable/ic_profile</item>
        <!--<item>@drawable/ic_whats_hot</item>-->
    </array>

    <string-array name="food_type">
        <item>Protein</item>
        <item>Dairy</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="account">Account</string>
    <string name="personalize">Personalize</string>
    <string name="goals">Goals</string>
    <string name="title_user_profile">User Profile</string>
    <string name="privacy_setting">Privacy setting</string>
    <string name="summary_user_profile">Name, Email, pwd, etc</string>
    <string name="summary_privacy_setting">Posting your records anonymously</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="btn_login_sign_in">LOGIN</string>
    <string name="btn_login_sign_up">SIGN UP</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="default_font">sans-serif-light</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_title_gender">I am a</string>
    <string name="title_gender">Gender</string>
    <string name="summary_gender">Guy / Gal</string>
    <string name="dialog_title_goal">I want to</string>
    <string name="title_goal">My goal:</string>
    <string name="summary_goal">Lose / add weight</string>
    <string name="title_activity_user_profile">Profile Account</string>
    <string name="ui_button_change_title">Change profile picture</string>
    <string name="ui_profile_name_title">Username</string>
    <string name="ui_profile_name_hint">Your name</string>
    <string name="ui_profile_email_title">Email</string>
    <string name="ui_profile_email_hint">Your Email</string>
    <string name="ui_profile_psw_title">Password</string>
    <string name="ui_profile_psw_hint">*******</string>
    <string name="ui_profile_zipcode_title">Zipcode</string>
    <string name="ui_profile_zipcode_hint">Your zipcode</string>
    <string name="ui_button_save_title">SAVE</string>
    <string name="ui_button_logout_title">LOGOUT</string>
    <string name="ui_profile_gender_title">Please motivate me</string>
    <string name="ui_profile_Motivate_daily">Daily</string>
    <string name="ui_profile_Motivate_weekly">Weekly</string>
    <string name="ui_profile_motivate_title">Please motivate me</string>
    <string name="ui_profile_toast_save_text">profile saved!</string>
    <string name="ui_profile_toast_logout_text">Log out!</string>
    <string name="preference_private">shared_preference</string>
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_psw">profile_password</string>
    <string name="preference_key_profile_motivate">profile_motivate</string>
    <string name="preference_key_profile_zipcode">profile_zipcode</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="title_height">My height</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_comment">Comment</string>
    <string name="dialog_title_comment">suggestion</string>
    <string name="dialog_title_height">My height is</string>
    <string name="dialog_title_weight">My weight is</string>
    <string name="title_weight">My weight</string>
    <string name="title_activity_display_map">Map</string>
    <string name="button_suggest">SUGGEST</string>
    <string name="button_cancel">CANCLE</string>
    <string name="menu_suggest">to be healthier :)</string>

</resources>
