<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageProfile"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_button_change_title"
            android:textColor="@color/app_green"
            android:id="@+id/btnChangePhoto"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:onClick="onChangePhotoClicked"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_green"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ui_profile_name_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editName"
            android:hint="@string/ui_profile_name_hint"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_green"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ui_profile_email_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmail"
            android:password="false"
            android:hint="@string/ui_profile_email_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_green"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ui_profile_psw_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editPsw"
            android:hint="@string/ui_profile_psw_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_green"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ui_profile_motivate_title" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radioMotivate"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_profile_Motivate_weekly"
                    android:id="@+id/radioWeekly"
                    android:checked="false"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_profile_Motivate_daily"
                    android:id="@+id/radioDaily"
                    android:checked="false"
                    android:layout_weight="1" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/app_green"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ui_profile_zipcode_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editZipcode"
            android:inputType="textCapWords"
            android:hint="@string/ui_profile_zipcode_hint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/save_btn"
                android:id="@+id/btnSave"
                android:background="@null"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_marginBottom="10dp"
                android:onClick="onSaveClicked" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cancel_btn"
                android:background="@null"
                android:id="@+id/btnLogout"
                android:layout_weight="1"
                android:onClick="onLogoutClicked"
                android:layout_marginBottom="10dp"
                android:clickable="true" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

